RESOLVED FIXED189232
REGRESSION (r191336): RenderFlexibleBox::adjustChildSizeForMinAndMax crashes in std::optional<>::value()
https://bugs.webkit.org/show_bug.cgi?id=189232
Summary REGRESSION (r191336): RenderFlexibleBox::adjustChildSizeForMinAndMax crashes ...
alan
Reported 2018-09-02 08:30:39 PDT
It's not guaranteed that computeMainAxisExtentForChild() comes back with a valid value.
Attachments
Patch (4.93 KB, patch)
2018-09-02 09:25 PDT, alan
no flags
Patch (4.84 KB, patch)
2018-09-02 20:02 PDT, alan
no flags
alan
Comment 1 2018-09-02 08:52:15 PDT
and since r234980, now we release assert on it.
alan
Comment 2 2018-09-02 09:24:56 PDT
alan
Comment 3 2018-09-02 09:25:19 PDT
Brent Fulgham
Comment 4 2018-09-02 11:24:47 PDT
Comment on attachment 348734 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=348734&action=review R=me > Source/WebCore/ChangeLog:12 > + ensure valid values through the virtual calls of computeIntrinsicLogicalContentHeightUsing. What symptom should we look for if these are expected to be valid? Should we have QA keep an eye out for anything in particular?
alan
Comment 5 2018-09-02 20:02:59 PDT
WebKit Commit Bot
Comment 6 2018-09-02 20:41:18 PDT
Comment on attachment 348753 [details] Patch Clearing flags on attachment: 348753 Committed r235590: <https://trac.webkit.org/changeset/235590>
WebKit Commit Bot
Comment 7 2018-09-02 20:41:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-09-02 20:42:21 PDT
Note You need to log in before you can comment on or make changes to this bug.